# tkinter-bataille-navale

./: .editorconfig  .gitignore  .sourcery_refactorings.yaml  ai.py  board.py  board_test.py  classes.puml  démineur.py  main.py  onefile.py  player.py  process.md  pyproject.toml  utils.py
tools/: combine.py
